[package]
name = "saweria-axum-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"

[dev-dependencies]
dotenvy = "0.15.7"
